log/build_2024-09-13_14-21-58/leg_dector/stderr.log
  File "/home/airlab/Downloads/LiDAR_HumanFollowing-master/install/leg_dector/lib/python3.8/site-packages/leg_dector/go_back.py", line 98
    if self.map_data is not None and self.start is not None
                                                                        ^
SyntaxError: invalid syntax

